@@ -1,3 +1,11 @@
+2010/08/19
+    1) add support for message_payload TLV for deliver_sm packets. This TLV is used in case a smpp meta-flag "use_message_payload" is set.
+    2) brings smppbox in conformity with SMPP v3.4 in regarding shedule_delivery_time and validiy_period fields in deliver_sm packets.
+    3) if connected ESME requests delivery report for a submit_sm packet, smppbox will now also notify the ESME of SMSC failures, generated by the bearerbox.
+    4) provides documentation updates.
+    5) some minor improvements, including larger dict-size for acks.
+
+
 2010/08/16
     Fixed ghost connections bug, where disconnected smppusers kept
     being visible as connected in bearerbox status page.
